--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+glam = "0.23.0"
 ocl = "0.19.4"
 rayon = "1.7.0"
 sdl2 = "0.35.2"
